chore: config docker services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.test:
+    app:
         build:
             context: ./vendor/laravel/sail/runtimes/8.1
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.1/app
+        container_name: micro-videos-app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -18,50 +19,61 @@ services:
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+            DB_HOST: db
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - app-net
         depends_on:
-            - mysql
+            - db
             - redis
-    mysql:
-        image: 'mysql/mysql-server:8.0'
+    db:
+        image: 'mysql:5.7'
+        container_name: micro-videos-db
         ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+            - '${DB_PORT}:3306'
         environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: "%"
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+            - MYSQL_DATABASE=${DB_DATABASE}
+            - MYSQL_USER=${DB_USERNAME}
+            - MYSQL_PASSWORD=${DB_PASSWORD}
+            - MYSQL_ALLOW_EMPTY_PASSWORD=1
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - 'db-vol:/var/lib/mysql'
         networks:
-            - sail
+            - app-net
         healthcheck:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
+
     redis:
         image: 'redis:alpine'
+        container_name: micro-videos-redis
         ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sail-redis:/data'
+            - '${REDIS_PORT:-6379}:6379'
         networks:
-            - sail
+            - app-net
         healthcheck:
             test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
+
+    nginx:
+        build: .docker/nginx
+        container_name: micro-videos-nginx
+        tty: true
+        ports:
+            - '${NGINX_PORT:-8000}:80'
+        volumes:
+            - .:/var/www
+        networks:
+            - app-net
+        depends_on:
+            - app
 networks:
-    sail:
+    app-net:
         driver: bridge
 volumes:
-    sail-mysql:
-        driver: local
-    sail-redis:
+    db-vol:
         driver: local
